增加kangdm相關的設定條目

--- a/files.ini
+++ b/files.ini
@@ -12,3 +12,6 @@ include=http://cnc3.finaleden.com/Type.aspx?id=*
 
 [92wy]
 include=http://comic.92wy.com/go/info*
+
+[kangdm]
+include=http://www.kangdm.com/comic/*
