將抓取圖片的演算法改為非同步 對API進行相應的修改 對各SITE SCRIPT進行相應的修改

--- a/files.ini
+++ b/files.ini
@@ -1,4 +1,9 @@
+[general]
+version=0.16-pre
+desc=更方便的觀看線上漫畫
+
 [finaleden]
+name=FinalEdenViewer
 include=http://www.finaleden.com/Type.aspx?id=*
 include=http://1.finaleden.com/Type.aspx?id=*
 include=http://2.finaleden.com/Type.aspx?id=*
@@ -11,7 +16,9 @@ include=http://cnc2.finaleden.com/Type.aspx?id=*
 include=http://cnc3.finaleden.com/Type.aspx?id=*
 
 [92wy]
+name=92wyViewer
 include=http://comic.92wy.com/go/info*
 
 [kangdm]
+name=KangdmViewer
 include=http://www.kangdm.com/comic/*
